--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -33,17 +33,19 @@ jobs:
         run: sam build --template-file $SAM_TEMPLATE --region $AWS_DEFAULT_REGION
 
       - name: Package SAM application
-        run: sam package \
-          --template-file .aws-sam/build/template.yaml \
-          --output-template-file packaged.yaml \
-          --region $AWS_DEFAULT_REGION \
-          --s3-prefix $STACK_NAME \
+        run: >
+          sam package
+          --template-file .aws-sam/build/template.yaml
+          --output-template-file packaged.yaml
+          --region $AWS_DEFAULT_REGION
+          --s3-prefix $STACK_NAME
           --s3-bucket $BUCKET_NAME
 
       - name: Deploy SAM application
-        run: sam deploy \
-          --template-file packaged.yaml \
-          --stack-name $STACK_NAME \
-          --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND \
-          --region $AWS_DEFAULT_REGION \
+        run: >
+          sam deploy
+          --template-file packaged.yaml
+          --stack-name $STACK_NAME
+          --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND
+          --region $AWS_DEFAULT_REGION
           --no-fail-on-empty-changeset
